--- a/styles/login_style.css
+++ b/styles/login_style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
 }
 .bg-green {
     background: linear-gradient(135deg, #1f4922, #1b741e);
