--- a/styles/home_style.css
+++ b/styles/home_style.css
@@ -6,7 +6,7 @@ header {
     text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7);
     padding: 5rem 0;
     position: relative;
-    height: 40vh; /* Increase the height of the header to fill the viewport */
+    height: 40vh;
 }
 
 header::before {
@@ -16,7 +16,7 @@ header::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Black filter with 50% transparency */
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 
