--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -1,5 +1,5 @@
 header {
-    background-image: url('images/header-bg.jpeg');
+    background-image: url('/public/images/header-bg.jpeg');
     background-size: cover;
     background-position: center;
     color: white;
